--- a/starter_code.html
+++ b/starter_code.html
@@ -376,7 +376,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#mvcbqkrqjm .gt_table {
+#mhuqkanmgx .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -401,13 +401,13 @@ summary {
   /* table.border.bottom.color */
 }
 
-#mvcbqkrqjm .gt_heading {
+#mhuqkanmgx .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
 }
 
-#mvcbqkrqjm .gt_title {
+#mhuqkanmgx .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -418,7 +418,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#mvcbqkrqjm .gt_subtitle {
+#mhuqkanmgx .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -429,7 +429,7 @@ summary {
   border-top-width: 0;
 }
 
-#mvcbqkrqjm .gt_bottom_border {
+#mhuqkanmgx .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -438,7 +438,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#mvcbqkrqjm .gt_column_spanner {
+#mhuqkanmgx .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -446,7 +446,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#mvcbqkrqjm .gt_col_heading {
+#mhuqkanmgx .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -460,23 +460,23 @@ summary {
   overflow-x: hidden;
 }
 
-#mvcbqkrqjm .gt_columns_top_border {
+#mhuqkanmgx .gt_columns_top_border {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
 }
 
-#mvcbqkrqjm .gt_columns_bottom_border {
+#mhuqkanmgx .gt_columns_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#mvcbqkrqjm .gt_sep_right {
+#mhuqkanmgx .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#mvcbqkrqjm .gt_group_heading {
+#mhuqkanmgx .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -501,7 +501,7 @@ summary {
   vertical-align: middle;
 }
 
-#mvcbqkrqjm .gt_empty_group_heading {
+#mhuqkanmgx .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -525,19 +525,19 @@ summary {
   vertical-align: middle;
 }
 
-#mvcbqkrqjm .gt_striped {
+#mhuqkanmgx .gt_striped {
   background-color: #8080800D;
 }
 
-#mvcbqkrqjm .gt_from_md > :first-child {
+#mhuqkanmgx .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#mvcbqkrqjm .gt_from_md > :last-child {
+#mhuqkanmgx .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#mvcbqkrqjm .gt_row {
+#mhuqkanmgx .gt_row {
   padding: 8px;
   /* row.padding */
   margin: 10px;
@@ -548,14 +548,14 @@ summary {
   overflow-x: hidden;
 }
 
-#mvcbqkrqjm .gt_stub {
+#mhuqkanmgx .gt_stub {
   border-right-style: solid;
   border-right-width: 2px;
   border-right-color: #D3D3D3;
   padding-left: 12px;
 }
 
-#mvcbqkrqjm .gt_summary_row {
+#mhuqkanmgx .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -565,7 +565,7 @@ summary {
   /* summary_row.text_transform */
 }
 
-#mvcbqkrqjm .gt_grand_summary_row {
+#mhuqkanmgx .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -575,19 +575,19 @@ summary {
   /* grand_summary_row.text_transform */
 }
 
-#mvcbqkrqjm .gt_first_summary_row {
+#mhuqkanmgx .gt_first_summary_row {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
 }
 
-#mvcbqkrqjm .gt_first_grand_summary_row {
+#mhuqkanmgx .gt_first_grand_summary_row {
   border-top-style: double;
   border-top-width: 6px;
   border-top-color: #D3D3D3;
 }
 
-#mvcbqkrqjm .gt_table_body {
+#mhuqkanmgx .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -602,7 +602,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#mvcbqkrqjm .gt_footnotes {
+#mhuqkanmgx .gt_footnotes {
   border-top-style: solid;
   /* footnotes.border.top.style */
   border-top-width: 2px;
@@ -611,7 +611,7 @@ summary {
   /* footnotes.border.top.color */
 }
 
-#mvcbqkrqjm .gt_footnote {
+#mhuqkanmgx .gt_footnote {
   font-size: 90%;
   /* footnote.font.size */
   margin: 0px;
@@ -619,7 +619,7 @@ summary {
   /* footnote.padding */
 }
 
-#mvcbqkrqjm .gt_sourcenotes {
+#mhuqkanmgx .gt_sourcenotes {
   border-top-style: solid;
   /* sourcenotes.border.top.style */
   border-top-width: 2px;
@@ -628,48 +628,48 @@ summary {
   /* sourcenotes.border.top.color */
 }
 
-#mvcbqkrqjm .gt_sourcenote {
+#mhuqkanmgx .gt_sourcenote {
   font-size: 90%;
   /* sourcenote.font.size */
   padding: 4px;
   /* sourcenote.padding */
 }
 
-#mvcbqkrqjm .gt_center {
+#mhuqkanmgx .gt_center {
   text-align: center;
 }
 
-#mvcbqkrqjm .gt_left {
+#mhuqkanmgx .gt_left {
   text-align: left;
 }
 
-#mvcbqkrqjm .gt_right {
+#mhuqkanmgx .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#mvcbqkrqjm .gt_font_normal {
+#mhuqkanmgx .gt_font_normal {
   font-weight: normal;
 }
 
-#mvcbqkrqjm .gt_font_bold {
+#mhuqkanmgx .gt_font_bold {
   font-weight: bold;
 }
 
-#mvcbqkrqjm .gt_font_italic {
+#mhuqkanmgx .gt_font_italic {
   font-style: italic;
 }
 
-#mvcbqkrqjm .gt_super {
+#mhuqkanmgx .gt_super {
   font-size: 65%;
 }
 
-#mvcbqkrqjm .gt_footnote_marks {
+#mhuqkanmgx .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="mvcbqkrqjm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="mhuqkanmgx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead>
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal gt_center gt_bottom_border" style>Model 1 Evaluation on All Data</th>
@@ -703,7 +703,7 @@ summary {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#wqpskcvegy .gt_table {
+#xoyearyhkx .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -728,13 +728,13 @@ summary {
   /* table.border.bottom.color */
 }
 
-#wqpskcvegy .gt_heading {
+#xoyearyhkx .gt_heading {
   background-color: #FFFFFF;
   /* heading.background.color */
   border-bottom-color: #FFFFFF;
 }
 
-#wqpskcvegy .gt_title {
+#xoyearyhkx .gt_title {
   color: #333333;
   font-size: 125%;
   /* heading.title.font.size */
@@ -745,7 +745,7 @@ summary {
   border-bottom-width: 0;
 }
 
-#wqpskcvegy .gt_subtitle {
+#xoyearyhkx .gt_subtitle {
   color: #333333;
   font-size: 85%;
   /* heading.subtitle.font.size */
@@ -756,7 +756,7 @@ summary {
   border-top-width: 0;
 }
 
-#wqpskcvegy .gt_bottom_border {
+#xoyearyhkx .gt_bottom_border {
   border-bottom-style: solid;
   /* heading.border.bottom.style */
   border-bottom-width: 2px;
@@ -765,7 +765,7 @@ summary {
   /* heading.border.bottom.color */
 }
 
-#wqpskcvegy .gt_column_spanner {
+#xoyearyhkx .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -773,7 +773,7 @@ summary {
   padding-bottom: 4px;
 }
 
-#wqpskcvegy .gt_col_heading {
+#xoyearyhkx .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   /* column_labels.background.color */
@@ -787,23 +787,23 @@ summary {
   overflow-x: hidden;
 }
 
-#wqpskcvegy .gt_columns_top_border {
+#xoyearyhkx .gt_columns_top_border {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
 }
 
-#wqpskcvegy .gt_columns_bottom_border {
+#xoyearyhkx .gt_columns_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#wqpskcvegy .gt_sep_right {
+#xoyearyhkx .gt_sep_right {
   border-right: 5px solid #FFFFFF;
 }
 
-#wqpskcvegy .gt_group_heading {
+#xoyearyhkx .gt_group_heading {
   padding: 8px;
   /* row_group.padding */
   color: #333333;
@@ -828,7 +828,7 @@ summary {
   vertical-align: middle;
 }
 
-#wqpskcvegy .gt_empty_group_heading {
+#xoyearyhkx .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -852,19 +852,19 @@ summary {
   vertical-align: middle;
 }
 
-#wqpskcvegy .gt_striped {
+#xoyearyhkx .gt_striped {
   background-color: #8080800D;
 }
 
-#wqpskcvegy .gt_from_md > :first-child {
+#xoyearyhkx .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#wqpskcvegy .gt_from_md > :last-child {
+#xoyearyhkx .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#wqpskcvegy .gt_row {
+#xoyearyhkx .gt_row {
   padding: 8px;
   /* row.padding */
   margin: 10px;
@@ -875,14 +875,14 @@ summary {
   overflow-x: hidden;
 }
 
-#wqpskcvegy .gt_stub {
+#xoyearyhkx .gt_stub {
   border-right-style: solid;
   border-right-width: 2px;
   border-right-color: #D3D3D3;
   padding-left: 12px;
 }
 
-#wqpskcvegy .gt_summary_row {
+#xoyearyhkx .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* summary_row.background.color */
@@ -892,7 +892,7 @@ summary {
   /* summary_row.text_transform */
 }
 
-#wqpskcvegy .gt_grand_summary_row {
+#xoyearyhkx .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   /* grand_summary_row.background.color */
@@ -902,19 +902,19 @@ summary {
   /* grand_summary_row.text_transform */
 }
 
-#wqpskcvegy .gt_first_summary_row {
+#xoyearyhkx .gt_first_summary_row {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
 }
 
-#wqpskcvegy .gt_first_grand_summary_row {
+#xoyearyhkx .gt_first_grand_summary_row {
   border-top-style: double;
   border-top-width: 6px;
   border-top-color: #D3D3D3;
 }
 
-#wqpskcvegy .gt_table_body {
+#xoyearyhkx .gt_table_body {
   border-top-style: solid;
   /* table_body.border.top.style */
   border-top-width: 2px;
@@ -929,7 +929,7 @@ summary {
   /* table_body.border.bottom.color */
 }
 
-#wqpskcvegy .gt_footnotes {
+#xoyearyhkx .gt_footnotes {
   border-top-style: solid;
   /* footnotes.border.top.style */
   border-top-width: 2px;
@@ -938,7 +938,7 @@ summary {
   /* footnotes.border.top.color */
 }
 
-#wqpskcvegy .gt_footnote {
+#xoyearyhkx .gt_footnote {
   font-size: 90%;
   /* footnote.font.size */
   margin: 0px;
@@ -946,7 +946,7 @@ summary {
   /* footnote.padding */
 }
 
-#wqpskcvegy .gt_sourcenotes {
+#xoyearyhkx .gt_sourcenotes {
   border-top-style: solid;
   /* sourcenotes.border.top.style */
   border-top-width: 2px;
@@ -955,48 +955,48 @@ summary {
   /* sourcenotes.border.top.color */
 }
 
-#wqpskcvegy .gt_sourcenote {
+#xoyearyhkx .gt_sourcenote {
   font-size: 90%;
   /* sourcenote.font.size */
   padding: 4px;
   /* sourcenote.padding */
 }
 
-#wqpskcvegy .gt_center {
+#xoyearyhkx .gt_center {
   text-align: center;
 }
 
-#wqpskcvegy .gt_left {
+#xoyearyhkx .gt_left {
   text-align: left;
 }
 
-#wqpskcvegy .gt_right {
+#xoyearyhkx .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#wqpskcvegy .gt_font_normal {
+#xoyearyhkx .gt_font_normal {
   font-weight: normal;
 }
 
-#wqpskcvegy .gt_font_bold {
+#xoyearyhkx .gt_font_bold {
   font-weight: bold;
 }
 
-#wqpskcvegy .gt_font_italic {
+#xoyearyhkx .gt_font_italic {
   font-style: italic;
 }
 
-#wqpskcvegy .gt_super {
+#xoyearyhkx .gt_super {
   font-size: 65%;
 }
 
-#wqpskcvegy .gt_footnote_marks {
+#xoyearyhkx .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="wqpskcvegy" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="xoyearyhkx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   <thead>
     <tr>
       <th colspan="3" class="gt_heading gt_title gt_font_normal gt_center gt_bottom_border" style>Model 2 Evaluation on All Data</th>
